# FP

./: .gitignore  COWORKER_ONBOARDING.md  adx_discovery.py  requirements.txt  sql_aad_connect_test.py
DI-SNFLK-AzureFunction-MSSQL/: .dockerignore  Dockerfile  README.md  host.json  pyproject.toml  requirements.txt
DI-SNFLK-AzureFunction-MSSQL/.github/: CODEOWNERS
DI-SNFLK-AzureFunction-MSSQL/.github/workflows/: actions.yaml  functions_setup.js  generate_folders.sh  settings.json
DI-SNFLK-AzureFunction-MSSQL/app_manager_bulk/: __init__.py  function_.json
DI-SNFLK-AzureFunction-MSSQL/batch_template/: __init__.py
DI-SNFLK-AzureFunction-MSSQL/helpers/: __init__.py
DI-SNFLK-AzureFunction-MSSQL/kerberos/: crontab  login.py  login.sh  start.sh
SQLRefactoring/tools/: pyproject.toml  requirements.txt
SQLRefactoring/tools/scripts/: adx_snapshot_and_semantic.py  analyze_fcts_explain.py  clone_and_enable_sos.py  clone_to_user_db_and_enable_sos.py  cluster_transient_copy_and_swap.py  complete_multisite_validation.py  create_clustered_copy_and_swap.py  debug_show_grants_user.py  debug_snapshot_diff.py  dev_schema_clone_and_sos_test.py  dev_sensor_table_stats.py  disable_sos_dev_sensor_tables.py  discover_adx_schema.py  discover_schema.py  enable_sos_dev_sensor_tables.py  enable_sos_on_clones.py  enable_sos_single.py  find_sensor_reading_tables.py  find_sensor_tables_across_account.py  find_tables_like_in_account.py  generate_complete_model.py  generate_complete_model_v2.py  get_drillblast_proc.py  get_drillblast_ref.py  get_existing_proc_ddl.py  get_function_ddl.py  (+21 more)
(+9339 files in other folders)
